Fix duration wrapping on smaller devices

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -60,6 +60,10 @@ h4 {
   color: #66757f;
 }
 
+.duration-counter {
+  white-space: nowrap;
+}
+
 blockquote {
   margin: 0;
   padding: 10px 0 10px 10px;
